# PIPE-CLIP

./: .gitignore  Git & Github.pptx  LICENSE  LICENSE.txt  README.md  SAMFilter.py  SAMFilter_rmdup.py  SAMFilter_rmdupV2.py  ZTNB.R  annotatePeaks.py  barcodeRemoval.py  barcodeRemover.py  clusterEnrich.py  finalMerge.py  findMutation.py  findMutationV2.py  findTruncation.py  getCluster.py  getCrosslinking.py  gui.py  hg19.RefSeq.bed  inputProcess.py  inputprocess_test.py  mergeReads.py  mergeReads_v2.py  mm10.RefSeq.bed  mutationFilter.py  mutationFilter_pvalue.py  parclipV2.sh  parclipV2.xml  parclipV2~  pipeclip.py  pipeclip.sh  pipeclip.xml  pipeline.sh  pipeline.sh~  pipelineV5  pyproject.toml
lib/: .SAMFilter.py.swo  .SAMFilter.py.swp  .pipeclip.py.swp  Alignment.py  Alignment.py~  BED.py  BED.py~  CLIP.py  CLIP.py~  Enrich.py  Mutation.py  Mutation2.py  OptValidator.py  Utils.py  Utils.py~  ZTNB.R  ZTNB_tryCatch.R  __init__.py  barcodeRemoval.py  clusterFilter.py  findMutation.py  findTruncation.py  getCluster.py  mergeReads.py  pipeclip.py  pipeclip.py~  runR1.sh
output/: test.crosslinkingMutations.bed  test.enrichedClusters.bed  test.merge  test.merge.ztnb  test.merge.ztnblog  test.reliableMutations.bed  test_deletion_crosslinking.txt  test_deletion_crosslinking.txt.anno  test_insertion_crosslinking.txt  test_insertion_crosslinking.txt.anno  test_substitution_crosslinking.txt
pipeclip/: Alignment.py  CLIP.py  Enrich.py  ZTNB_tryCatch.R  barcode_removal.py  main.py  mutation.py
pipeclip/lib/: CLIP.py  Enrich.py  Mutation2.py  Utils.py  __init__.py  runR1.sh
