[tool.poetry]
name = "pipeclip"
version = "2.0.2"
description = "PIPELINE FOR CLIP SEQ DATA"
readme = "README.md"
keywords = ["bioinformatics", "CLIP", "PAR-CLIP", "iCLIP", "RNA-protein interaction"]
authors = ["Chang Ye <yech1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pysam = "^0.19.0"
pybedtools = "^0.9.0"
click = "^8.1.2"
rpy2 = "^3.5.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pipeclip = 'pipeclip.main:runPipeClip'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
